--- a/client/configure.html
+++ b/client/configure.html
@@ -4,7 +4,7 @@
   </p>
   <ol>
     <li>
-      Visit <a href="https://hq.groupbuddies.com/admin" target="blank">https://hq.groupbuddies.com/admin</a>
+      Visit <a href="https://hq.subvisual.co/admin" target="blank">https://hq.subvisual.co/admin</a>
     </li>
     <li>
       Set the Redirect uri to: <span class="url">{{siteUrl}}_oauth/headquarters</span>
